--- a/_config.yml
+++ b/_config.yml
@@ -21,16 +21,14 @@
 title: Your awesome title
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  My Website
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://dncharlton.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  dncharlton
 
 # Build settings
-theme: minima
+theme: jekyll-dash
 plugins:
   - jekyll-feed
 
@@ -53,3 +51,29 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+paginate: 5
+paginate_path: "/blog/page:num/"
+
+tag_permalink_style: pretty
+tag_page_layout: tag_page
+tag_page_dir: tag
+
+dash:
+  date_format: "%-d %b, %Y"
+
+  # disqus:
+  #   shortname: <your-discuss-shortname>
+
+  # generate social links in footer
+  # supported colors: green, red, orange, blue, cyan, pink, teal, yellow, indigo, purple
+  # social_links:
+  #   - url: https://twitter.com/bitbrain_
+  #     icon: twitter-square
+  #     color: cyan
+  #   - url: https://bitbrain.itch.io
+  #     icon: itch-io
+  #     color: red
+  #   - url: https://github.com/bitbrain
+  #     icon: github-square
+  #     color: purple
