--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: dncharlton - RE/BE Blog
+email: dncharlton.dc@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  My Website
+  This is my website to blog my reverse engineering and binary exploitation adventure.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://dncharlton.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: dncharlton
