--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 site: dncharlton
 title: dncharlton
-greetings: Hi 👋
+greetings: Daniel Noah Charlton
 description: >-
-  just a minimalist, personal blog
+  Minimal Personal Blog
 lang: en-US
 timezone:  Australia/Sydney
 repo: https://github.com/dncharlton/dncharlton.github.io # site repo [optional]
